# blender

./: .gitignore  800地点の雨量データ自動生成-eb316e67.md  rain_data.csv
blender/agent-harness/: BLENDER.md  mise.toml  pyproject.toml  setup.py
blender/agent-harness/cli_anything/blender/: __init__.py  __main__.py  blender_cli.py
blender/agent-harness/cli_anything/blender/core/: dataviz.py  export.py  project.py  scene.py  session.py
blender/agent-harness/cli_anything/blender/skills/: SKILL.md
blender/agent-harness/cli_anything/blender/tests/: TEST.md  test_core.py  test_full_e2e.py
blender/agent-harness/cli_anything/blender/utils/: blender_backend.py
